--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
-    "cheero": "^0.0.1",
+    "cheerio": "^1.0.0",
     "express": "^4.21.0",
     "images-api": "file:",
     "nodemon": "^3.1.4"
